--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# Security
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+node_modules/
+.next/
