--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pdfkit": "^0.17.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-qr-code": "^2.0.18",
     "react-scroll": "^1.9.3",
     "stripe": "^20.3.0",
     "tailwind-merge": "^3.4.0",
