--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@paypal/react-paypal-js": "^8.9.2",
     "@stripe/stripe-js": "^8.7.0",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
