--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scroll": "^1.9.3",
     "stripe": "^20.3.0",
     "tailwind-merge": "^3.4.0",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
